Added menu sections

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <nav class="nav-links">
         <a href="#" class="active">Home</a>
         <a href="#">Menu</a>
-        <a href="#">Service</a>
+        <a href="https://ezekieleyitayo.vercel.app/#projects">Service</a>
         <a href="#">Contact</a>
         <div class="auth-buttons mobile-auth">
           <a href="#" class="login">Login</a>
@@ -47,8 +47,11 @@
           Everywhere
         </h1>
         <p>
-          We make sure we deliver your food order to you fast wherever you are
-          reaching us from
+          Wherever you are, we're already on the move to serve you. We don’t
+          just deliver food - we deliver speed, satisfaction, and smiles.
+          Whether you're at home, the office, or on the go, our team makes sure
+          your order reaches you in no time. Fast, reliable, and always fresh -
+          that's how we roll.
         </p>
         <a href="#" class="cta-btn">Get Started</a>
       </div>
@@ -58,6 +61,128 @@
         </div>
       </div>
     </main>
+
+    <section class="services-section">
+      <h2>What We Do</h2>
+      <h3>We offer the Best Service</h3>
+
+      <div class="service-cards">
+        <div class="card">
+          <i class="fas fa-clipboard-list"></i>
+          <h4>Easy Order</h4>
+          <p>
+            Our platform is very easy to use and makes placing your order simple
+            and quick.
+          </p>
+        </div>
+
+        <div class="card">
+          <i class="fas fa-bolt"></i>
+          <h4>Fast Delivery</h4>
+          <p>
+            We get your order to you faster than ever — no delays, just speed
+            and reliability.
+          </p>
+        </div>
+
+        <div class="card">
+          <i class="fas fa-concierge-bell"></i>
+          <h4>Best Service</h4>
+          <p>
+            We offer the best service experience, always putting your
+            satisfaction first.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <section class="menu-section">
+      <h2>Menu</h2>
+      <h3>Fall in love with our Menu</h3>
+
+      <div class="menu-categories">
+        <span class="active">Swallow</span>
+        <span>Pasta</span>
+        <span>Rice</span>
+        <span>Pizza</span>
+        <span>Meat</span>
+        <span>Drinks</span>
+        <span>Other Dishes</span>
+      </div>
+
+      <div class="menu-grid">
+        <div class="menu-card">
+          <img
+            src="https://via.placeholder.com/300x200?text=Pounded+Yam"
+            alt="Pounded Yam"
+          />
+          <h4>Pounded Yam</h4>
+          <p>This is 2 wraps of pounded yam and any soup of your choice.</p>
+          <div class="price">₦2,500.00</div>
+        </div>
+
+        <div class="menu-card">
+          <img
+            src="https://via.placeholder.com/300x200?text=Amala"
+            alt="Amala"
+          />
+          <h4>Amala</h4>
+          <p>Three wraps of amala and any soup of your choice.</p>
+          <div class="price">₦1,850.00</div>
+        </div>
+
+        <div class="menu-card">
+          <img src="https://via.placeholder.com/300x200?text=Semo" alt="Semo" />
+          <h4>Semo</h4>
+          <p>This is 2 wraps of semo and any soup of your choice.</p>
+          <div class="price">₦2,500.00</div>
+        </div>
+
+        <div class="menu-card">
+          <img
+            src="https://via.placeholder.com/300x200?text=Eba+%2F+Garri"
+            alt="Eba/Garri"
+          />
+          <h4>Eba/ Garri</h4>
+          <p>Either 3 wraps of eba/garri and any soup of your choice.</p>
+          <div class="price">₦1,750.00</div>
+        </div>
+
+        <div class="menu-card">
+          <img
+            src="https://via.placeholder.com/300x200?text=Wheat"
+            alt="Wheat"
+          />
+          <h4>Wheat</h4>
+          <p>Three wraps of wheat and any soup of your choice.</p>
+          <div class="price">₦2,850.00</div>
+        </div>
+
+        <div class="menu-card">
+          <img
+            src="https://via.placeholder.com/300x200?text=Starch"
+            alt="Starch"
+          />
+          <h4>Starch</h4>
+          <p>Three wraps of starch and any soup of your choice.</p>
+          <div class="price">₦2,850.00</div>
+        </div>
+
+        <div class="menu-card">
+          <img src="https://via.placeholder.com/300x200?text=Eko" alt="Eko" />
+          <h4>Eko</h4>
+          <p>Three wraps of eko and any soup of your choice.</p>
+          <div class="price">₦1,500.00</div>
+        </div>
+
+        <div class="menu-card">
+          <img src="https://via.placeholder.com/300x200?text=Pap" alt="Pap" />
+          <h4>Pap/Papuru</h4>
+          <p>Three wraps of papuru and any soup of your choice.</p>
+          <div class="price">₦2,650.00</div>
+        </div>
+      </div>
+    </section>
 
     <script src="script.js"></script>
   </body>
