Modified menu display

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <nav class="nav-links">
         <a href="#" class="active">Home</a>
         <a href="#">Menu</a>
-        <a href="https://ezekieleyitayo.vercel.app/#projects">Service</a>
+        <a href="#">Service</a>
         <a href="#">Contact</a>
         <div class="auth-buttons mobile-auth">
           <a href="#" class="login">Login</a>
@@ -48,10 +48,9 @@
         </h1>
         <p>
           Wherever you are, we're already on the move to serve you. We don’t
-          just deliver food - we deliver speed, satisfaction, and smiles.
-          Whether you're at home, the office, or on the go, our team makes sure
-          your order reaches you in no time. Fast, reliable, and always fresh -
-          that's how we roll.
+          just deliver food - we deliver speed, satisfaction, and smiles. Our
+          team makes sure your order reaches you in no time wherever you are.
+          Fast, reliable, and always fresh - that's how we roll.
         </p>
         <a href="#" class="cta-btn">Get Started</a>
       </div>
@@ -117,7 +116,7 @@
             alt="Pounded Yam"
           />
           <h4>Pounded Yam</h4>
-          <p>This is 2 wraps of pounded yam and any soup of your choice.</p>
+          <p class="clamped-text">This is 2 wraps of pounded yam and any soup of your choice.</p>
           <div class="price">₦2,500.00</div>
         </div>
 
@@ -127,14 +126,14 @@
             alt="Amala"
           />
           <h4>Amala</h4>
-          <p>Three wraps of amala and any soup of your choice.</p>
+          <p class="clamped-text">Three wraps of amala and any soup of your choice.</p>
           <div class="price">₦1,850.00</div>
         </div>
 
         <div class="menu-card">
           <img src="https://via.placeholder.com/300x200?text=Semo" alt="Semo" />
           <h4>Semo</h4>
-          <p>This is 2 wraps of semo and any soup of your choice.</p>
+          <p class="clamped-text">This is 2 wraps of semo and any soup of your choice.</p>
           <div class="price">₦2,500.00</div>
         </div>
 
@@ -144,7 +143,7 @@
             alt="Eba/Garri"
           />
           <h4>Eba/ Garri</h4>
-          <p>Either 3 wraps of eba/garri and any soup of your choice.</p>
+          <p class="clamped-text">Either 3 wraps of eba/garri and any soup of your choice.</p>
           <div class="price">₦1,750.00</div>
         </div>
 
@@ -154,7 +153,7 @@
             alt="Wheat"
           />
           <h4>Wheat</h4>
-          <p>Three wraps of wheat and any soup of your choice.</p>
+          <p class="clamped-text">Three wraps of wheat and any soup of your choice.</p>
           <div class="price">₦2,850.00</div>
         </div>
 
@@ -164,21 +163,21 @@
             alt="Starch"
           />
           <h4>Starch</h4>
-          <p>Three wraps of starch and any soup of your choice.</p>
+          <p class="clamped-text">Three wraps of starch and any soup of your choice.</p>
           <div class="price">₦2,850.00</div>
         </div>
 
         <div class="menu-card">
           <img src="https://via.placeholder.com/300x200?text=Eko" alt="Eko" />
           <h4>Eko</h4>
-          <p>Three wraps of eko and any soup of your choice.</p>
+          <p class="clamped-text">Three wraps of eko and any soup of your choice.</p>
           <div class="price">₦1,500.00</div>
         </div>
 
         <div class="menu-card">
           <img src="https://via.placeholder.com/300x200?text=Pap" alt="Pap" />
           <h4>Pap/Papuru</h4>
-          <p>Three wraps of papuru and any soup of your choice.</p>
+          <p class="clamped-text">Three wraps of papuru and any soup of your choice.</p>
           <div class="price">₦2,650.00</div>
         </div>
       </div>
