Added promo section

--- a/index.html
+++ b/index.html
@@ -116,7 +116,9 @@
             alt="Pounded Yam"
           />
           <h4>Pounded Yam</h4>
-          <p class="clamped-text">This is 2 wraps of pounded yam and any soup of your choice.</p>
+          <p class="clamped-text">
+            This is 2 wraps of pounded yam and any soup of your choice.
+          </p>
           <div class="price">₦2,500.00</div>
         </div>
 
@@ -126,14 +128,18 @@
             alt="Amala"
           />
           <h4>Amala</h4>
-          <p class="clamped-text">Three wraps of amala and any soup of your choice.</p>
+          <p class="clamped-text">
+            Three wraps of amala and any soup of your choice.
+          </p>
           <div class="price">₦1,850.00</div>
         </div>
 
         <div class="menu-card">
           <img src="https://via.placeholder.com/300x200?text=Semo" alt="Semo" />
           <h4>Semo</h4>
-          <p class="clamped-text">This is 2 wraps of semo and any soup of your choice.</p>
+          <p class="clamped-text">
+            This is 2 wraps of semo and any soup of your choice.
+          </p>
           <div class="price">₦2,500.00</div>
         </div>
 
@@ -143,7 +149,9 @@
             alt="Eba/Garri"
           />
           <h4>Eba/ Garri</h4>
-          <p class="clamped-text">Either 3 wraps of eba/garri and any soup of your choice.</p>
+          <p class="clamped-text">
+            Either 3 wraps of eba/garri and any soup of your choice.
+          </p>
           <div class="price">₦1,750.00</div>
         </div>
 
@@ -153,7 +161,9 @@
             alt="Wheat"
           />
           <h4>Wheat</h4>
-          <p class="clamped-text">Three wraps of wheat and any soup of your choice.</p>
+          <p class="clamped-text">
+            Three wraps of wheat and any soup of your choice.
+          </p>
           <div class="price">₦2,850.00</div>
         </div>
 
@@ -163,25 +173,110 @@
             alt="Starch"
           />
           <h4>Starch</h4>
-          <p class="clamped-text">Three wraps of starch and any soup of your choice.</p>
+          <p class="clamped-text">
+            Three wraps of starch and any soup of your choice.
+          </p>
           <div class="price">₦2,850.00</div>
         </div>
 
         <div class="menu-card">
           <img src="https://via.placeholder.com/300x200?text=Eko" alt="Eko" />
           <h4>Eko</h4>
-          <p class="clamped-text">Three wraps of eko and any soup of your choice.</p>
+          <p class="clamped-text">
+            Three wraps of eko and any soup of your choice.
+          </p>
           <div class="price">₦1,500.00</div>
         </div>
 
         <div class="menu-card">
           <img src="https://via.placeholder.com/300x200?text=Pap" alt="Pap" />
           <h4>Pap/Papuru</h4>
-          <p class="clamped-text">Three wraps of papuru and any soup of your choice.</p>
+          <p class="clamped-text">
+            Three wraps of papuru and any soup of your choice.
+          </p>
           <div class="price">₦2,650.00</div>
         </div>
       </div>
     </section>
+
+    <!-- Mobile App Promo Section -->
+    <section class="app-promo">
+      <div class="promo-text">
+        <h2>Make your order on our <span>Mobile App</span></h2>
+        <p>
+          All you need is to download our mobile app from the app store and
+          follow easy steps to order your meal.
+        </p>
+        <div class="app-buttons">
+          <img
+            src="https://upload.wikimedia.org/wikipedia/commons/5/5f/Available_on_the_App_Store_%28black%29.png"
+            alt="App Store"
+            class="store-btn"
+          />
+          <img
+            src="https://upload.wikimedia.org/wikipedia/commons/7/78/Google_Play_Store_badge_EN.svg"
+            alt="Google Play"
+            class="store-btn"
+          />
+        </div>
+      </div>
+      <div class="promo-image">
+        <img src="https://i.ibb.co/PZK3f5m/man-phone.png" alt="Promo" />
+      </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer">
+      <div class="footer-top">
+        <div class="footer-brand">
+          <h3><span class="logo-icon">🍽️</span> Lizzy’s Foods</h3>
+          <p>
+            We are an online Food ordering platform that gets your food to you
+            on time.
+          </p>
+          <div class="socials">
+            <img
+              src="https://upload.wikimedia.org/wikipedia/commons/1/1b/Facebook_icon.svg"
+              alt="Facebook"
+            />
+            <img
+              src="https://upload.wikimedia.org/wikipedia/commons/6/6f/Logo_of_Twitter.svg"
+              alt="X"
+            />
+          </div>
+        </div>
+
+        <div class="footer-links">
+          <div>
+            <h4>Menu</h4>
+            <ul>
+              <li>Home</li>
+              <li>Menu</li>
+              <li>Services</li>
+              <li>Contact</li>
+            </ul>
+          </div>
+          <div>
+            <h4>Company</h4>
+            <ul>
+              <li>Who we are</li>
+              <li>FAQ</li>
+              <li>Blog</li>
+              <li>Team</li>
+            </ul>
+          </div>
+          <div>
+            <h4>Support</h4>
+            <ul>
+              <li>Support center</li>
+              <li>Order</li>
+              <li>Feedback</li>
+              <li>Account</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <script src="script.js"></script>
   </body>
